--- a/notes/bash/basic/index.html
+++ b/notes/bash/basic/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Notes</title>
+<title>Bash Variables</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -11,10 +11,10 @@
 <link rel=stylesheet href=/css/flag-icon.min.css>
 <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600" rel=stylesheet>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css>
-<meta property="og:title" content="Notes">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="http://laminsanneh.com/notes/">
+<meta property="og:title" content="Bash Variables">
+<meta property="og:description" content="Variable NAME=&#34;John&#34; echo $NAME echo &#34;$NAME&#34; echo &#34;${NAME}    Condition if [[ -z &#34;$string&#34; ]]; then echo &#34;String is empty&#34; elif [[ -n &#34;$string&#34; ]]; then echo &#34;String is not empty&#34; fi     ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="http://laminsanneh.com/notes/bash/basic/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -66,9 +66,9 @@ Lamin Sanneh</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/bash/>Bash</a>
-<ul>
-<li><a href=/notes/bash/basic/ title=Variables>Variables</a></li>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/bash/>Bash</a>
+<ul class=active>
+<li><a class=active href=/notes/bash/basic/ title=Variables>Variables</a></li>
 </ul>
 </li>
 </div>
@@ -80,28 +80,31 @@ Lamin Sanneh</a>
 <section class=content-section id=content-section>
 <div class="content container-fluid" id=content>
 <div class="container-fluid note-card-holder" id=note-card-holder>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>Variable</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>NAME<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;John&#34;</span>
+echo $NAME
+echo <span style=color:#e6db74>&#34;</span>$NAME<span style=color:#e6db74>&#34;</span>
+echo <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>NAME<span style=color:#e6db74>}</span><span style=color:#e6db74>
+</span></code></pre></div></div>
 </div>
-<div class=paginator>
-<ul class="pagination pagination-default">
-<li class=page-item>
-<a href=/notes/ aria-label=First class=page-link role=button><span aria-hidden=true>&#171;&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/notes/ aria-label=Previous class=page-link role=button><span aria-hidden=true>&#171;</span></a>
-</li>
-<li class=page-item>
-<a href=/notes/ aria-label="Page 1" class=page-link role=button>1</a>
-</li>
-<li class="page-item active">
-<a href=# aria-current=page aria-label="Page 2" class=page-link role=button>2</a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Next class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;</span></a>
-</li>
-<li class="page-item disabled">
-<a href=# aria-disabled=true aria-label=Last class=page-link role=button tabindex=-1><span aria-hidden=true>&#187;&#187;</span></a>
-</li>
-</ul>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>Condition</span></h5>
+<div class=card>
+<div class=card-body><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#66d9ef>if</span> <span style=color:#f92672>[[</span> -z <span style=color:#e6db74>&#34;</span>$string<span style=color:#e6db74>&#34;</span> <span style=color:#f92672>]]</span>; <span style=color:#66d9ef>then</span>
+  echo <span style=color:#e6db74>&#34;String is empty&#34;</span>
+<span style=color:#66d9ef>elif</span> <span style=color:#f92672>[[</span> -n <span style=color:#e6db74>&#34;</span>$string<span style=color:#e6db74>&#34;</span> <span style=color:#f92672>]]</span>; <span style=color:#66d9ef>then</span>
+  echo <span style=color:#e6db74>&#34;String is not empty&#34;</span>
+<span style=color:#66d9ef>fi</span>
+</code></pre></div></div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </section>
