--- a/search/index.html
+++ b/search/index.html
@@ -33,7 +33,7 @@ Initial setup Search depends on additional output content type of JSON in config
 <span class=navbar-toggler-icon></span>
 </button>
 <a class=navbar-brand href=/>
-My New Hugo Site</a>
+Lamin Sanneh</a>
 <button class="navbar-toggler navbar-light" id=toc-toggler type=button onclick=toggleTOC()>
 <span class=navbar-toggler-icon></span>
 </button>
@@ -92,17 +92,20 @@ My New Hugo Site</a>
 <div class="row text-left">
 <div class="col-md-4 col-sm-12">
 <h5>Navigation</h5>
-</div>
-<div class="col-md-4 col-sm-12">
-<p>Stay up to date with email notification</p>
-<form method=post action=https://blogtrottr.com>
-<div class=form-group>
-<input type=email class=form-control name=btr_email placeholder="Enter email"><br>
-<input type=hidden name=btr_url value=http://laminsanneh.com/index.xml>
-<input type=hidden name=schedule_type value=1>
-<small id=emailHelp class="form-text text-muted">By entering your email address, you agree to receive the newsletter of this website.</small>
-<button type=submit class="btn btn-info"> Submit </button>
-</form>
+<ul>
+<li class=nav-item>
+<a class=smooth-scroll href=/#about>About</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=/#skills>Skills</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=/#experiences>Experiences</a>
+</li>
+<li class=nav-item>
+<a class=smooth-scroll href=/#education>Education</a>
+</li>
+</ul>
 </div>
 </div>
 </div>
